[package]
name = "hackattic_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
base64 = "0.22.1"

[dev-dependencies]
httpmock = "0.7.0"
serde_json = "1.0.140"
