[package]
name = "hackattic_solutions"
version = "0.1.0"
edition = "2024"

[dependencies]
hackattic_helper = { path = "../hackattic_helper" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
anyhow = "1.0.98"
thiserror = "2.0.12"
rcgen = "0.14.2"
openssl = "0.10.73"
sha256 = "1.6.0"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
scrypt = "0.11.0"
hex = "0.4.3"
sha2 = "0.10.9"
image = "0.25.6"
rustface = "0.1.7"        # pure Rust Haar‑cascade detector

